--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
-<project>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.nitaicharan.udemy_restapiawrestantn1</groupId>
@@ -8,6 +10,12 @@
   <name>udemy_restapiawrestantn1</name>
   <url>https://github.com/nitaicharan/Udemy-RESTAPIAWRESTANTN1</url>
 
+  <properties>
+    <maven.compiler.release>11</maven.compiler.release>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
+
   <dependencies>
 
     <!-- Lombok -->
@@ -15,15 +23,14 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.18.16</version>
-      <scope>provided</scope>
     </dependency>
 
     <!-- JUnit Jupiter API -->
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <version>5.7.0</version>
-      <scope>test</scope>
+        <groupId>com.github.scribejava</groupId>
+        <artifactId>scribejava-apis</artifactId>
+        <version>2.5.3</version>
+        <scope>test</scope>
     </dependency>
 
     <!-- JUnit Jupiter Engine -->
